fixing word wrap

--- a/gatzport4/gatsby-startbootstrap-agency/src/style/main.scss
+++ b/gatzport4/gatsby-startbootstrap-agency/src/style/main.scss
@@ -12,7 +12,8 @@ p {
 }
 
 .text-primary {
-  color:  !important;
+  color: $primary !important;
+  overflow-wrap: break-word;
 }
 
 h1,
@@ -40,7 +41,6 @@ h6 {
 ::selection {
   background: $primary;
   text-shadow: none;
-  
 }
 
 img::selection {
